refactor battle state handling and fix sprite URL processing for java 26